[package]
name = "kingdomsbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev.package.imageproc]
opt-level = 3

[build]
rustflags = ["-C", "target-cpu=native"]        # custom flags to pass to all compiler invocations
incremental = true            # whether or not to enable incremental compilation

[net]
git-fetch-with-cli = true

[registries.crates-io]
protocol = "sparse"

[dependencies]
lazy_static = "1.4.0"
poise = "0.5.2"
serde = "1.0.157"
serde_json = "1.0"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread"] }
mongodb = "2.4.0"
futures = "0.3"
noise = "0.8.2"
imageproc = "0.23.0"
image = "0.24.5"
rusttype = "0.9.3"